# UniMixerClient

./: .clang-format  .clangd  AUDIO_ARCHITECTURE_MIGRATION.md  CLAUDE.md  DEBUGGING_QUICK_REFERENCE.md  DESERIALIZATION_DEBUG.md  ESP_PROG_DEBUGGING_GUIDE.md  LVGL_WRAPPER_ANALYSIS.md  MESSAGING_REFACTORING_PLAN.md  OPTIMIZATION_GUIDE.md  PERFORMANCE_FIX_SUMMARY.md  PIOConfig.h  REFACTORING_ANALYSIS.md  REFACTORING_AUTOMATION.md  REFACTOR_SUMMARY.md  ServerRequirements.md  SquareLine_Project.spj  TASK_PERFORMANCE_IMPROVEMENTS.md  UPGRADE_SUMMARY.md  build_log.txt  cleanup_plan.md  custom_esp32s3.cfg  custom_target.cfg  execute_refactoring.sh  platformio.ini  t.txt  test.ps1  update_includes.sh  verify_includes.sh  www
src/ui/: CMakeLists.txt  UniversalDialog.cpp  UniversalDialog.h  filelist.txt  process_selector.cpp  process_selector.h  ui.c  ui.h  ui_custom_init.cpp  ui_custom_init.h  ui_events.h  ui_helpers.c  ui_helpers.h
src/ui/components/: BalanceDeviceSelector.cpp  BalanceDeviceSelector.h  DeviceSelector.cpp  DeviceSelector.h  DeviceSelectorManager.cpp  DeviceSelectorManager.h  MainDeviceSelector.cpp  MainDeviceSelector.h  lv_image_roller.c  lv_image_roller.h  ui_comp.c  ui_comp.h  ui_comp_btn.c  ui_comp_btn.h  ui_comp_connectionstatuspnl.c  ui_comp_connectionstatuspnl.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_volumeslider.c  ui_comp_volumeslider.h
src/ui/images/: ui_img_2039083_png.c
src/ui/screens/: ui_Screen1.c  ui_Screen1.h  ui_scrMain.c  ui_scrMain.h  ui_screenDebug.c  ui_screenDebug.h  ui_screenFileExplorer.c  ui_screenFileExplorer.h  ui_screenMain.c  (+7 more)
(+276 files in other folders)
